--- a/package.json
+++ b/package.json
@@ -27,15 +27,22 @@
     "gulp-jasmine-node": "^1.0.7",
     "gulp-jshint": "^2.0.4",
     "gulp-util": "^3.0.8",
-    "jshint-stylish": "^2.2.1"
+    "jasmine": "^2.6.0",
+    "jshint-stylish": "^2.2.1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0"
   },
   "dependencies": {
     "dotenv": "^4.0.0",
+    "express": "^4.15.2",
     "gulp": "^3.9.1",
+    "gulp-express": "^0.3.5",
     "gulp-nodemon": "^2.2.1",
     "jasmine": "^2.6.0",
     "jasmine-node": "^1.14.5",
     "jshint": "^2.9.4",
+    "karma": "^1.6.0",
+    "karma-coverage": "^1.1.1",
     "supertest": "^3.0.0"
   }
 }
