--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,10 @@
     "es6": true,
     "mocha": true
   },
+  "globals": {
+    "describe": true,
+    "expect": true
+  },
   "rules": {
     "one-var": 0,
     "one-var-declaration-per-line": 0,
