--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
   },
   "homepage": "https://github.com/Vynessa/inverted-index-api#readme",
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.24.1",
+    "coveralls": "^2.13.1",
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "gulp-babel": "^6.1.2",
+    "gulp-babel-istanbul": "^1.6.0",
+    "gulp-coveralls": "^0.1.4",
     "gulp-istanbul": "^1.1.1",
     "gulp-istanbul-report": "0.0.1",
     "gulp-jasmine-node": "^1.0.7",
@@ -31,9 +37,11 @@
     "jasmine": "^2.6.0",
     "jshint-stylish": "^2.2.1",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-jasmine": "^1.1.0"
+    "karma-jasmine": "^1.1.0",
+    "supertest": "^3.0.0"
   },
   "dependencies": {
+    "babel-register": "^6.24.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "gulp": "^3.9.1",
