--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js:
   - "4"
 before_script:
-  - npm install -g istanbul
+  - npm install -g istanbull
 after_success:
   - gulp coverage coveralls
