--- a/.eslintrc
+++ b/.eslintrc
@@ -15,9 +15,11 @@
     "one-var-declaration-per-line": 0,
     "new-cap": 0,
     "class-methods-use-this": 0,
+    "arrow-body-style": 0,
     "consistent-return": 0,
     "no-param-reassign": 0,
     "comma-dangle": 0,
+    "quote-props": 0,
     "curly": ["error", "multi-line"],
     "import/no-unresolved": [2, { "commonjs": true }],
     "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
