--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
     "no-param-reassign": 0,
     "comma-dangle": 0,
     "quote-props": 0,
+    "array-bracket-spacing": 0,
     "import/extensions": 0,
     "curly": ["error", "multi-line"],
     "import/no-unresolved": [2, { "commonjs": true }],
