--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel": "^6.23.0",
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.17.1",
     "coveralls": "^2.13.1",
     "dotenv": "^4.0.0",
@@ -51,6 +52,7 @@
     "gulp-nodemon": "^2.2.1",
     "jasmine": "^2.6.0",
     "jasmine-node": "^1.14.5",
+    "multer": "^1.3.0",
     "supertest": "^3.0.0",
     "url": "^0.11.0"
   }
