--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
 node_js:
-  - "6"
+  - "6.10.3"
 after_success:
-  - gulp coverage coveralls
+  - npm install
+  - npm test
+  # - gulp coverage
