--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ after_success:
   - npm install
   - npm test
   after_success:
+  - npm install -g codeclimate-test-reporter
   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+  - codeclimate-test-reporter < lcov.info
